# aegis-guardrails

./: README.md  pyproject.toml
aegis/: dsl.py  service.py
tests/: test_rules.py
